<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_main_margin">
        <LinearLayout
                android:id="@+id/category_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:paddingBottom="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_8dp"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_category"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textColor="@color/black"/>

            <Spinner
                    android:id="@+id/activity_main_spinner_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/difficulty_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingBottom="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:layout_below="@id/category_group">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_difficulty"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textColor="@color/black"/>

            <Spinner
                    android:id="@+id/activity_main_spinner_difficulty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/questions_type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingBottom="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:layout_below="@id/difficulty_group">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_questions_type"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textColor="@color/black"/>

            <Spinner
                    android:id="@+id/activity_main_spinner_questions_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/number_of_questions_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingBottom="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_8dp"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_number_of_questions"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textColor="@color/black"/>

            <Spinner
                    android:id="@+id/activity_main_spinner_num_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>


    <Button
            android:id="@+id/activity_main_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_main_margin"
            android:text="@string/activity_main_start"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>